--- a/dashboard/templates/dashboard/dbbackup.html
+++ b/dashboard/templates/dashboard/dbbackup.html
@@ -52,7 +52,7 @@
                         </form> 
                     </td>
                 </tr>
-                {% empty %}
+                {% else %}
                 <tr>
                     <td colspan="4" class="text-center text-gray-500 py-6">
                         No backups found
