--- a/dashboard/templates/dashboard/dbbackup.html
+++ b/dashboard/templates/dashboard/dbbackup.html
@@ -20,7 +20,6 @@
     </button>
 </form>
 
-{% if users %}
 <div class="space-y-6">
 
     <!-- Table -->
@@ -52,7 +51,7 @@
                         </form> 
                     </td>
                 </tr>
-                {% else %}
+                {% empty %}
                 <tr>
                     <td colspan="4" class="text-center text-gray-500 py-6">
                         No backups found
@@ -64,6 +63,9 @@
         </table>
     </div>
 
+
+
+</div>
 
 {% if users.paginator.num_pages > 1 %}
 <div class="flex justify-center mt-4">
@@ -96,9 +98,7 @@
         {% endif %}
     </div>
 </div>
+
 {% endif %}
 
-
-</div>
-{% endif %}
 {% endblock %}
