--- a/dashboard/templates/dashboard/report.html
+++ b/dashboard/templates/dashboard/report.html
@@ -51,7 +51,7 @@
                 <tr>
                     <td>{{ forloop.counter }}</td>
                     <td>{{ b.database }}</td>
-                    <td>{{ b.timestamp }}</td>
+                    <td>{{ b.display_timestamp }}</td>
                     <td>{{ b.file_path }}</td>
                     <td>{{ b.file_name }}</td>
                     <td>{{ b.status }}</td>
