--- a/dashboard/templates/dashboard/view_user.html
+++ b/dashboard/templates/dashboard/view_user.html
@@ -52,6 +52,21 @@
         <a href="{% url 'add_user' %}" class="btn btn-primary btn-sm">+ Add User</a>
 
     </div>
+    {% if messages %}
+    <div id="django-messages" class="fixed top-4 right-4 space-y-2 z-50 w-72">
+        {% for message in messages %}
+            <div class="alert 
+                {% if message.tags == 'success' %}alert-success{% endif %}
+                {% if message.tags == 'error' %}alert-error{% endif %}
+                {% if message.tags == 'warning' %}alert-warning{% endif %}
+                {% if message.tags == 'info' %}alert-info{% endif %}
+            shadow-lg transition-opacity duration-700"
+            >
+                <span>{{ message }}</span>
+            </div>
+        {% endfor %}
+    </div>
+    {% endif %}
 
     <!-- User Table -->
     <div class="overflow-x-auto bg-base-100 shadow-lg rounded-lg">
@@ -78,29 +93,35 @@
                     <td>{{ user.db_name }}</td>
 
                     <td class="flex gap-2">
-                        <a href="{% url 'edit_user' user.id %}" class="btn btn-xs btn-xs bg-gray-700 hover:bg-gray-800 text-white w-16">
+                        <a href="{% url 'edit_user' user.id %}"
+                            class="btn btn-xs btn-xs bg-gray-700 hover:bg-gray-800 text-white w-16">
                             Edit
                         </a>
-                        <a href="{% url 'delete_user' user.id %}" class="btn btn-xs btn-xs bg-gray-700 hover:bg-gray-800 text-white w-16">
+                        <a href="{% url 'delete_user' user.id %}"
+                            class="btn btn-xs btn-xs bg-gray-700 hover:bg-gray-800 text-white w-16">
                             Delete
                         </a>
                         {% if user.is_active %}
-                        <a href="{% url 'block_user' user.id %}" class="btn btn-xs btn-xs bg-gray-700 hover:bg-gray-800 text-white w-20">
+                        <a href="{% url 'block_user' user.id %}"
+                            class="btn btn-xs btn-xs bg-gray-700 hover:bg-gray-800 text-white w-20">
                             Block
                         </a>
                         {% else %}
-                        <a href="{% url 'block_user' user.id %}" class="btn btn-xs btn-xs bg-green-700 hover:bg-green-800 text-white w-20">
+                        <a href="{% url 'block_user' user.id %}"
+                            class="btn btn-xs btn-xs bg-green-700 hover:bg-green-800 text-white w-20">
                             Unblock
                         </a>
                         {% endif %}
                         {% if not user.msg_active %}
-                        <label for="send-message-modal-{{ user.id }}" class="btn btn-xs bg-gray-700 hover:bg-gray-800 text-white w-28 cursor-pointer">
+                        <label for="send-message-modal-{{ user.id }}"
+                            class="btn btn-xs bg-gray-700 hover:bg-gray-800 text-white w-28 cursor-pointer">
                             Send Message
                         </label>
                         {% else %}
-                         <a href="{% url 'clear_message' user.id %}" class="btn btn-xs bg-gray-700 hover:bg-gray-800 text-white w-28 cursor-pointer">
+                        <a href="{% url 'clear_message' user.id %}"
+                            class="btn btn-xs bg-red-700 hover:bg-red-800 text-white w-28 cursor-pointer">
                             Clear Message
-                         </a>
+                        </a>
                         {% endif %}
 
                     </td>
@@ -127,7 +148,8 @@
                                 placeholder="Write message" required></textarea>
 
                             <div class="modal-action">
-                                <label for="send-message-modal-{{ user.id }}" class="btn bg-gray-200 text-gray-800 hover:bg-gray-300">
+                                <label for="send-message-modal-{{ user.id }}"
+                                    class="btn bg-gray-200 text-gray-800 hover:bg-gray-300">
                                     Cancel
                                 </label>
                                 <button type="submit" class="btn bg-blue-600 text-white hover:bg-blue-700">
@@ -187,6 +209,15 @@
 </div>
 
 
+<script>
+    setTimeout(() => {
+        const box = document.getElementById('django-messages');
+        if (box) {
+            box.style.opacity = '0';
+            setTimeout(() => box.remove(), 700);
+        }
+    }, 3000);
+</script>
 
 
 {% endblock %}
