date format fix

--- a/dashboard/templates/dashboard/view_user.html
+++ b/dashboard/templates/dashboard/view_user.html
@@ -139,7 +139,7 @@
                             <label class="label mt-3">
                                 <span class="label-text">Message Expiration date</span>
                             </label>
-                            <input type="date" name="send_date" class="input input-bordered w-full" required>
+                            <input type="date" name="expiry_date" class="input input-bordered w-full" required>
 
                             <label class="label mt-3">
                                 <span class="label-text">Message</span>
