--- a/dashboard/templates/dashboard/dbbackup.html
+++ b/dashboard/templates/dashboard/dbbackup.html
@@ -48,7 +48,7 @@
 
                         <form method="post" action="{% url 'backupscroll' %}">
                             {% csrf_token %}
-                            <button type="submit" class="btn btn-sm btn-secondary">Backup Now</button>
+                            <button type="submit" class="btn btn-sm bg-gray-700 hover:bg-gray-800 text-white">Backup Now</button>
                             <input type="hidden" name="user_id" value="{{ user.id }}">
                         </form>
                     </td>
