--- a/dashboard/templates/dashboard/view_user.html
+++ b/dashboard/templates/dashboard/view_user.html
@@ -69,6 +69,8 @@
 </div>
 {% endif %}
 
+<h1>{{ today }}</h1>
+<h1>hi</h1>
 
     <!-- User Table -->
     <div class="overflow-x-auto bg-base-100 shadow-lg rounded-lg">
@@ -141,7 +143,7 @@
                             <label class="label mt-3">
                                 <span class="label-text">Message Expiration date</span>
                             </label>
-                            <input type="date" name="expiry_date" class="input input-bordered w-full" required>
+                            <input type="date" name="expiry_date" min="{{ today|date:'Y-m-d' }}" class="input input-bordered w-full" required>
 
                             <label class="label mt-3">
                                 <span class="label-text">Message</span>
